##Text encoding: utf-8

2011-07-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use next gnumeric API (tentative).
	* libs/gcr/cleavagesdlg.cc: redesigned.
	* libs/gcr/grid.cc: add row headers and a vertical scrollbar.
	* programs/crystal/docprop.cc: fixed window title when document title
	is empty.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* ui/crystal/cleavages.ui: redesigned.

2011-07-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/cleavagesdlg.cc: display existing cleavages.
	* libs/gcr/cleavagesdlg.h: ditto.
	* libs/gcr/grid.cc: ditto.

2011-07-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add signals to GcrGrid.
	* libs/gcr/grid.cc: ditto.
	* libs/gcr/grid.h: ditto.
	* libs/gcugtk/Makefile.am: ditto.
	* libs/gcugtk/marshalers.list: ditto.

2011-07-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: display column headers.
	* ui/crystal/cleavages.ui: restore title.
	* ui/crystal/docprop.ui: redesigned.

2011-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atom.cc: don't scale fractional coordinates.
	* libs/gcr/cleavagesdlg.cc: fixed cast to DialogOwner.
	* libs/gcr/document.cc: fixed cell paramters from CIF files.
	* libs/gcr/grid.cc: fixed criticals.
	* plugins/loaders/cif/cif.cc: fixed alpha angle loading.
	* ui/crystal/cleavages.ui: redesigned.

2011-07-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/sizedlg.cc: redesigned dialog boxes.
	* programs/crystal/view-settings.cc: ditto.
	* ui/crystal/prefs.ui: ditto.
	* ui/crystal/size.ui: ditto.
	* ui/crystal/view-settings.ui: ditto.

2011-07-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/gcuperiodic.c: make sure that wanted colors are always used.
	* ui/libgcu/gcuperiodic.ui: minor fixes.

2011-07-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/docprop.cc: cleaned out deprecated gtk code.
	* libs/gcp/newfiledlg.cc: ditto.